--- a/buymeHuj2.html
+++ b/buymeHuj2.html
@@ -1158,18 +1158,15 @@
     <div class="application-main">
       <div id="ember2469" class="ember-view bm-category-page loading-fade"><div class="wrapper">
     
-    <h1 class="title-xxl bottom-md top-none">הבחירה שלך: מלון יהודה ירושלים</h1>
+    <h1 class="title-xxl bottom-md top-none">הבחירה שלך: אירוח כפרי חרע בשדרות</h1>
 
         <div style="font-size: 16px;" class="description bm-body-1 lr-bm-body-2">
             <p><strong>מה זה כולל?</strong> </p>
             <ul style="margin: 20px;">
-                <li style="list-style-type: circle;">קפה בוקר</li>
-                <li style="list-style-type: circle;">ארוחת צהריים במסעדת המוציא או בקרבת מקום</li>
-                <li style="list-style-type: circle;">חירוע אחר הצהריים</li>
-                <li style="list-style-type: circle;">סיור בשוק מחנה יהודה וארוחת ערב</li>
-                <li style="list-style-type: circle;">שקשוק ערב</li>
-                <li style="list-style-type: circle;">ארוחת בוקר במלון</li>
-                <li style="list-style-type: circle;">ארוחת צהריים</li>
+                <li style="list-style-type: circle;">ארוחת צהריים מפנקת</li>
+                <li style="list-style-type: circle;">מתנה - סט "פרחים ומאפים"</li>
+                <li style="list-style-type: circle;">אירוח באמבטיה חמה ומוקצפת בליווי תותים ושוקו חם</li>
+                <li style="list-style-type: circle;">מגוון הפתעות</li>
             </ul>
         </div>
 
