--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
         window.location.href = 'buymeHuj2.html';
     }
 </script>
-
-        
     <style type="text/css">iframe#_hjRemoteVarsFrame {display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;}</style><style>#glassix-client{
     display: initial;
 }
@@ -1164,10 +1162,10 @@
     <div class="application-main">
       <div id="ember2469" class="ember-view bm-category-page loading-fade"><div class="wrapper">
     
-    <h1 class="title-xxl bottom-md top-none">חוג' הנסיכה, קיבלת שובר מתנה של BUYME גרסת HUJ</h1>
+    <h1 class="title-xxl bottom-md top-none">חוג' הנסיכה, קיבלת שובר מתנה של BUYME גרסת HUJ 2023</h1>
 
         <div style="font-size: 16px;" class="description bm-body-1 lr-bm-body-2">
-            <p>לפני הכל אנחנו רוצים לאחל לך מזל טוב ליום הולדתך ה-42. מאחלים לך שיתגשמו כמעט כל משאלותייך כבר בשנה החדשה הזאת של חייך. </p><p>עכשיו למתנה! בחרי מתנה מתוך הרשימה למטה. הערה קטנה: המתנה ניתנת למימוש ביום חמישי 15/9/2022 בלבד. לא ניתן לשנות את הבחירה.</p>
+            <p>כאות הערכה על החזה המרשים שלך והתקופה הארוכה שעבדת קשה, אנחנו רוצים להעניק לך מתנה לבחירה!</p>
         </div>
 
     <ul class="grid bm-product-cards">
@@ -1189,7 +1187,7 @@
 <div class="product-card-bg" data-lazyattr="style" style="background-image: url(&#39;./buymeHuj_files/IRobot.jpg&#39;) ; "></div></div>
 </a></div>
             <div id="ember2480" class="ember-view bm-product-card-link mx-4 lr-6 sm-12">
-<a id="ember2481" href="javascript:setSelection(true, 'מלון יהודה ירושלים')" class="ember-view">            <div id="ember2482" class="ember-view bm-product-card"><div class="top">
+<a id="ember2481" href="javascript:setSelection(false, 'מלון יהודה ירושלים')" class="ember-view">            <div id="ember2482" class="ember-view bm-product-card"><div class="top">
 <!---->
         <div class="logo">
             <img id="ember2483" alt=""  data-lazyattr="src" class="ember-view" src="./buymeHuj_files/siteNewLogo4658357.jpg">
@@ -1223,7 +1221,7 @@
 <div class="product-card-bg" data-lazyattr="style" style="background-image: url(&#39;./buymeHuj_files/barkan.jpg&#39;) ; "></div></div>
 </a></div>
             <div id="ember2492" class="ember-view bm-product-card-link mx-4 lr-6 sm-12">
-<a id="ember2493" href="javascript:setSelection(false, 'נסיעה ברכבת הלוך חזור כמו שאולי ואירנה')" class="ember-view">            <div id="ember2494" class="ember-view bm-product-card"><div class="top">
+<a id="ember2493" href="javascript:setSelection(true, 'אירוח כפרי חרע')" class="ember-view">            <div id="ember2494" class="ember-view bm-product-card"><div class="top">
 <!---->
         <div class="logo">
             <img id="ember2495" alt="שוברים במתנה למסעדה ליום הולדת" data-lazyattr="src" class="ember-view" src="./buymeHuj_files/siteNewLogo316990.jpg">
@@ -1233,7 +1231,7 @@
 
 <div class="bottom">
     <span class="name bm-subtitle-1">
-        <span style="font-size:12px;"><strong>סיור טעימות מודרך באזור השרון:</strong> הסיור כולל נסיעה ברכבת, ספינג' והפתעות נוספות. </span>
+        <span style="font-size:12px;"><strong>אירוח כפרי חרע בשדרות:</strong> האירוח כולל ארוחת צהריים מפנקת, אמבטיה חמה, סט "פרחים ומאפים" ומגוון הפתעות נוספות </span>
     </span>
 <!----></div>
 <div class="product-card-bg" data-lazyattr="style" style="background-image: url(&#39;./buymeHuj_files/sfing.jpg&#39;) ; "></div></div>
